--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=bill_buddy
 server.port=8090
 spring.datasource.url=jdbc:mysql://localhost/bill_buddy?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=@Zl954954
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
 spring.jpa.show-sql=true
