--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -15,6 +15,8 @@ jwt.expiration=24 * 60 * 60 * 1000
 invitation.jwt.expiration=60 * 60 * 1000
 logging.level.org.springframework.security=DEBUG
 # Google Oauth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=YOUR_CLIENT-ID
+spring.security.oauth2.client.registration.google.client-secret=YOUR_SECRET
 # SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
