--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/postcss": "^4.0.9",
     "antd": "^5.24.2",
     "axios": "^1.7.9",
