added checkout apt

--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -27,4 +27,4 @@ spring.mail.password=uuvvracqpybvpsit
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Customized Properties
-bill-buddy.client.url=http://localhost:5173/
+bill-buddy.client.url=http://localhost:5173
