--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,8 @@
     "@tailwindcss/postcss": "^4.0.9",
     "antd": "^5.24.2",
     "axios": "^1.7.9",
-    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "zustand": "^5.0.3"
