--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -26,5 +26,13 @@ spring.mail.username=zlei9549@gmail.com
 spring.mail.password=uuvvracqpybvpsit
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
 # Customized Properties
 bill-buddy.client.url=http://localhost:5173
