Refactored User class

--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -1,7 +1,7 @@
 spring.application.name=bill_buddy
 server.port=8090
 spring.datasource.url=jdbc:mysql://localhost/bill_buddy?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=YOUR_DATABASE_USERNAME
+spring.datasource.name=YOUR_DATABASE_name
 spring.datasource.password=YOUR_DATABASE_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
@@ -22,14 +22,14 @@ spring.security.oauth2.client.registration.google.client-secret=YOUR_SECRET
 # SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=zlei9549@gmail.com
-spring.mail.password=uuvvracqpybvpsit
+spring.mail.name=billbuddy2025@gmail.com
+spring.mail.password=tmpkvuhpyobyhmcp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
+spring.rabbitmq.name=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
