--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -1,7 +1,7 @@
 spring.application.name=bill_buddy
 server.port=8090
 spring.datasource.url=jdbc:mysql://localhost/bill_buddy?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.name=YOUR_DATABASE_name
+spring.datasource.name=YOUR_DATABASE_USERNAME
 spring.datasource.password=YOUR_DATABASE_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
@@ -29,10 +29,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.name=guest
+spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
+# Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 # Customized Properties
 bill-buddy.client.url=http://localhost:5173
