--- a/server/pom.xml
+++ b/server/pom.xml
@@ -115,6 +115,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>11.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
