--- a/server/src/main/resources/application-example.properties
+++ b/server/src/main/resources/application-example.properties
@@ -25,7 +25,7 @@ spring.security.oauth2.client.registration.google.client-secret=YOUR_SECRET
 # SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=root@gmail.com
+spring.mail.username=billbuddy2025@gmail.com
 spring.mail.password=cckjyhurkyzlorxr
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
