--- a/server/pom.xml
+++ b/server/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>flyway-mysql</artifactId>
             <version>11.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
