--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "antd": "5.16.2",
     "autoprefixer": "10.4.19",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "framer-motion": "11.2.8",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
